syntax = "proto3";
package stafiprotocol.stafihub.rate;

// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/stafiprotocol/stafihub/x/rate/types";

// GenesisState defines the rate module's genesis state.
message GenesisState {
    // this line is used by starport scaffolding # genesis/proto/state
}
